--- a/assets/freelancer_details.css
+++ b/assets/freelancer_details.css
@@ -93,6 +93,7 @@ body {
 .cover-photo {
     width: 100%;
     height: 300px;
+     aspect-ratio: 3 / 1;
     object-fit: cover;
     border-radius: 8px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
